--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "compile-schemas-login": "json2ts -i login/schemas -o login/types",
     "compile-schemas-date": "json2ts -i date/schemas -o date/types",
     "pretest": "npm run build",
-    "test": "tap -b -j1 tests/*.test.ts",
+    "test": "npm run lint && npm run unit",
+    "unit": "tap -b -j1 tests/*.test.ts",
     "lint": "standardx **/*.ts"
   },
   "repository": {
@@ -44,6 +45,7 @@
     "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
+    "husky": "^4.2.5",
     "json-schema-to-typescript": "^9.1.1",
     "pino": "^6.5.1",
     "standardx": "^5.0.0",
@@ -64,5 +66,10 @@
     "ignore": [
       "types/"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   }
 }
