--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",
     "start": "fastify start index.js",
-    "compile-schemas": "npm run compile-schemas-login && npm run compile-schemas-appointment",
-    "compile-schemas-login": "json2ts -i login/schemas -o login/types",
+    "compile-schemas": "npm run compile-schemas-auth && npm run compile-schemas-appointment",
+    "compile-schemas-auth": "json2ts -i auth/schemas -o auth/types",
     "compile-schemas-appointment": "json2ts -i appointment/schemas -o appointment/types",
     "pretest": "npm run build",
     "test": "npm run lint && npm run unit",
