--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "appointment-service",
   "version": "1.0.0",
-  "description": "An appointment service",
+  "description": "Provides appointment functionality and authorization APIs",
   "main": "index.js",
   "scripts": {
     "prebuild": "npm run compile-schemas",
